dev-stack/emsa/db_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: emsa-db
  name: emsa-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: emsa-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: emsa-db
    spec:
      containers:
        - args:
            - postgres
            - -c
            - max_connections=1000
          image: emsa-db
          name: emsa-db
          ports:
            - containerPort: 5432
      restartPolicy: Always
