dev-stack/emsa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emsa-ui
  namespace: default
  labels:
    app.kubernetes.io/name: emsa-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: emsa-ui
  template:
    annotations:
    metadata:
      labels:
        app.kubernetes.io/name: emsa-ui
    strategy:
      type: Recreate
    spec:
      volumes:
        # Create the shared files volume to be used in both pods
        - name: shared-files
          emptyDir: {}
        - name: php-config
          emptyDir: {}
        # Add the ConfigMap we declared above as a volume for the pod
        - name: nginx-config-volume
          configMap:
            name: nginx-config
      containers:
        - image: nginx:latest
          name: nginx
          volumeMounts:
            - name: shared-files
              mountPath: /usr/share/nginx/html
            - name: php-config
              mountPath: /opt/emsa/config.php
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          ports:
            - name: emsa-ui
              containerPort: 8000
              protocol: TCP

        - image: emsa-ui
          name: emsa-ui
          volumeMounts:
          - name: php-config
            mountPath: /opt/emsa/config.php
          - name: shared-files
            mountPath: /usr/share/nginx/html
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -r /app/. /usr/share/nginx/html && cp -r /conf/. /opt/emsa/config.php"]
          imagePullPolicy: Always
          ports:
            - name: php
              containerPort: 9000
              protocol: TCP
            # - name: xdebug
            #   containerPort: 9003
            #   protocol: TCP
      restartPolicy: Always
