dev-stack/emsa/db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emsa-db
  namespace: default
  labels:
    app.kubernetes.io/name: emsa-db
spec:
  type: ClusterIP
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app.kubernetes.io/name: emsa-db
