dev-stack/emsa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emsa-ui
  namespace: default
  labels:
    app.kubernetes.io/name: emsa-ui
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: emsa-ui
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: emsa-ui
